feat: support relative file:///./path in BindingResolver, fix Windows URI resolution